alignment errors fixed

--- a/css/app.css
+++ b/css/app.css
@@ -210,7 +210,7 @@ fieldset[disabled] .sinmin-form-control {
 }
 
 label.error {
-  color: #EA52AA;
+  color: #EA5200;
   height: 0px;
 }
 
